--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "hbs": "^4.2.0",
+    "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1",
     "prompt-sync": "^4.2.0"
